@@ -7,6 +7,7 @@ Changelog for BannerY.
 - Added property "source" in object byAd. Now you can select separate media sources for each ad.
 - Removed system setting "bannery.media_source".
 - Rewritten snippet "BannerY". Now it works through pdoTools and has many new features.
+- [#2] Image can be removed from banner.
 
 1.1.0 beta (15.07.2013)
 ============
